name:                GeoIndex
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            Application uses free data from multiple sources to provide geo search
license:             MIT
license-file:        LICENSE
author:              Matthew Brown
maintainer:          matt@ederoyd.co.uk
category:            Commandline
build-type:          Simple
Cabal-version:       >=1.18

Executable geo-index
    hs-source-dirs: src
    main-is: Main-Index.hs

  Build-depends:
    base >= 4.5.0.0,
    csv >= 0.1.2,
    protocol-buffers >= 2.0.14,
    protocol-buffers-descriptor >= 2.0.14,
    utf8-string >= 0.3.7,
    bytestring >= 0.10.0.2,
    zlib >= 0.5.4.1,
    containers >= 0.5.4.0,
    binary >= 0.7.1.0,
    aeson >= 0.7.0.1,
    directory >= 1.2.0.1

  ghc-options: -O2 -rtsopts -with-rtsopts=-K67108864 -threaded
  default-language: Haskell2010
  
Executable geo-search
    hs-source-dirs: src
    main-is: Main-Search.hs

  Build-depends:
    base >= 4.5.0.0,
    csv >= 0.1.2,
    protocol-buffers >= 2.0.14,
    protocol-buffers-descriptor >= 2.0.14,
    utf8-string >= 0.3.7,
    bytestring >= 0.10.0.2,
    zlib >= 0.5.4.1,
    containers >= 0.5.4.0,
    binary >= 0.7.1.0,
    aeson >= 0.7.0.1,
    directory >= 1.2.0.1

  ghc-options: -O2 -rtsopts -with-rtsopts=-K67108864 -threaded
  default-language: Haskell2010

Executable geo-server
    hs-source-dirs: src
    main-is: Main-Server.hs

  Build-depends:
    base >= 4.5.0.0,
    csv >= 0.1.2,
    protocol-buffers >= 2.0.14,
    protocol-buffers-descriptor >= 2.0.14,
    utf8-string >= 0.3.7,
    bytestring >= 0.10.0.2,
    zlib >= 0.5.4.1,
    containers >= 0.5.4.0,
    binary >= 0.7.1.0,
    aeson >= 0.7.0.1,
    directory >= 1.2.0.1

  ghc-options: -O2 -rtsopts -with-rtsopts=-K67108864 -threaded
  default-language: Haskell2010


