name:                GeoIndex
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            Application uses free data from multiple sources to provide geo search
license:             MIT
license-file:        LICENSE
author:              Matthew Brown
maintainer:          matt@ederoyd.co.uk
category:            Commandline
build-type:          Simple
Cabal-version:       >=1.20

Executable geo-index
    hs-source-dirs: src
    main-is: Main-Index.hs

  Build-depends:
    base >= 4.7.0.0,
    utf8-string >= 0.3.8,
    binary >= 0.7.2.1,
    aeson >= 0.8.0.0,
    bytestring >= 0.10.4.0,
    text >= 1.1.1.3,
    cereal >= 0.4.0.1,
    containers >= 0.5.5.1,
    protobuf >= 0.2.0.4

  ghc-options: -O2 -rtsopts -with-rtsopts=-K67108864 -threaded -fwarn-unused-imports
  default-language: Haskell2010

Executable geo-search
    hs-source-dirs: src
    main-is: Main-Search.hs

  Build-depends:
    base >= 4.7.0.0,
    utf8-string >= 0.3.8,
    binary >= 0.7.2.1,
    aeson >= 0.8.0.0,
    bytestring >= 0.10.4.0,
    text >= 1.1.1.3,
    cereal >= 0.4.0.1,
    containers >= 0.5.5.1,
    protobuf >= 0.2.0.4


  ghc-options: -O2 -rtsopts -with-rtsopts=-K67108864 -threaded -fwarn-unused-imports
  default-language: Haskell2010

Executable geo-server
    hs-source-dirs: src
    main-is: Main-Server.hs

  Build-depends:
    base >= 4.7.0.0,
    utf8-string >= 0.3.8,
    binary >= 0.7.2.1,
    aeson >= 0.8.0.0,
    bytestring >= 0.10.4.0,
    text >= 1.1.1.3,
    cereal >= 0.4.0.1,
    containers >= 0.5.5.1,
    protobuf >= 0.2.0.4,
    snap-core == 0.9.6.4,
    snap-server == 0.9.4.6,
    snap == 0.13.3.2,
    mtl



  ghc-options: -O2 -rtsopts -with-rtsopts=-K67108864 -threaded -fwarn-unused-imports
  default-language: Haskell2010
