name:                GeoIndex
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.2
synopsis:            Application uses free data from multiple sources to provide geo search
license:             MIT
license-file:        LICENSE
author:              Matthew Brown
maintainer:          matt@ederoyd.co.uk
category:            Commandline
build-type:          Simple
Cabal-version:       >=1.22

Executable geo-index
    hs-source-dirs: src
    main-is: Main-Index.hs

  Build-depends:
    base,
    utf8-string,
    binary,
    aeson,
    bytestring,
    text,
    cereal,
    containers,
    protobuf

  ghc-options: -rtsopts -with-rtsopts=-K128M -threaded -fwarn-unused-imports
  default-language: Haskell2010
  other-modules:
    Common
    Index
    JSONEntry
    Proto

Executable geo-search
    hs-source-dirs: src
    main-is: Main-Search.hs

  Build-depends:
    base,
    utf8-string,
    binary,
    aeson,
    bytestring,
    text,
    cereal,
    containers,
    protobuf


  ghc-options: -rtsopts -with-rtsopts=-K64M -threaded -fwarn-unused-imports
  default-language: Haskell2010
  other-modules:
    Common
    Proto
    Search


Executable geo-server
    hs-source-dirs: src
    main-is: Main-Server.hs

  Build-depends:
    base,
    utf8-string,
    binary,
    aeson,
    bytestring,
    text,
    cereal,
    containers,
    snap-core,
    snap-server,
    mtl,
    protobuf

  Default-Extensions:
    DeriveDataTypeable

  ghc-options: -rtsopts -with-rtsopts=-K64M -threaded -fwarn-unused-imports
  default-language: Haskell2010
  other-modules:
    Common
    JSONEntry
    Proto
    Search
